Replace Collections singleton factory usages (#18837)