@@ -19,7 +19,6 @@
 package org.apache.pinot.core.operator.query;
 
 import com.google.common.base.CaseFormat;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.apache.pinot.common.request.context.ExpressionContext;
@@ -78,7 +77,7 @@ public class DistinctOperator extends BaseOperator<DistinctResultsBlock> {
 
   @Override
   public List<BaseProjectOperator<?>> getChildOperators() {
-    return Collections.singletonList(_projectOperator);
+    return List.of(_projectOperator);
   }
 
   @Override
