@@ -21,7 +21,6 @@ package org.apache.pinot.segment.local.upsert;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -94,8 +93,8 @@ import static org.testng.Assert.*;
 public class ConcurrentMapPartitionUpsertMetadataManagerTest {
   private static final String RAW_TABLE_NAME = "testTable";
   private static final String REALTIME_TABLE_NAME = TableNameBuilder.REALTIME.tableNameWithType(RAW_TABLE_NAME);
-  private static final List<String> PRIMARY_KEY_COLUMNS = Collections.singletonList("pk");
-  private static final List<String> COMPARISON_COLUMNS = Collections.singletonList("timeCol");
+  private static final List<String> PRIMARY_KEY_COLUMNS = List.of("pk");
+  private static final List<String> COMPARISON_COLUMNS = List.of("timeCol");
   private static final String DELETE_RECORD_COLUMN = "deleteCol";
   private static final File INDEX_DIR =
       new File(FileUtils.getTempDirectory(), "ConcurrentMapPartitionUpsertMetadataManagerTest");
@@ -462,7 +461,7 @@ public class ConcurrentMapPartitionUpsertMetadataManagerTest {
     checkRecordLocation(recordLocationMap, 1, newSegment1, 4, 120, hashFunction);
     assertEquals(validDocIds2.getMutableRoaringBitmap().toArray(), new int[]{0, 2, 3});
     assertEquals(newValidDocIds1.getMutableRoaringBitmap().toArray(), new int[]{4});
-    assertEquals(trackedSegments, Collections.singleton(newSegment1));
+    assertEquals(trackedSegments, Set.of(newSegment1));
 
     // Stop the metadata manager
     upsertMetadataManager.stop();
@@ -473,7 +472,7 @@ public class ConcurrentMapPartitionUpsertMetadataManagerTest {
     assertEquals(recordLocationMap.size(), 1);
     checkRecordLocation(recordLocationMap, 1, newSegment1, 4, 120, hashFunction);
     assertEquals(newValidDocIds1.getMutableRoaringBitmap().toArray(), new int[]{4});
-    assertEquals(trackedSegments, Collections.singleton(newSegment1));
+    assertEquals(trackedSegments, Set.of(newSegment1));
 
     // Close the metadata manager
     upsertMetadataManager.close();
@@ -780,7 +779,7 @@ public class ConcurrentMapPartitionUpsertMetadataManagerTest {
     checkRecordLocation(recordLocationMap, 1, newSegment1, 4, 120, hashFunction);
     assertEquals(validDocIds2.getMutableRoaringBitmap().toArray(), new int[]{0, 2, 3});
     assertEquals(newValidDocIds1.getMutableRoaringBitmap().toArray(), new int[]{4});
-    assertEquals(trackedSegments, Collections.singleton(newSegment1));
+    assertEquals(trackedSegments, Set.of(newSegment1));
     assertEquals(queryableDocIds2.getMutableRoaringBitmap().toArray(), new int[]{0, 3});
     assertTrue(newQueryableDocIds1.getMutableRoaringBitmap().isEmpty());
 
@@ -793,7 +792,7 @@ public class ConcurrentMapPartitionUpsertMetadataManagerTest {
     assertEquals(recordLocationMap.size(), 1);
     checkRecordLocation(recordLocationMap, 1, newSegment1, 4, 120, hashFunction);
     assertEquals(newValidDocIds1.getMutableRoaringBitmap().toArray(), new int[]{4});
-    assertEquals(trackedSegments, Collections.singleton(newSegment1));
+    assertEquals(trackedSegments, Set.of(newSegment1));
     assertTrue(newQueryableDocIds1.getMutableRoaringBitmap().isEmpty());
 
     // Close the metadata manager
