@@ -20,7 +20,6 @@ package org.apache.pinot.segment.spi.partition;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import java.io.Serializable;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import javax.annotation.Nullable;
@@ -51,7 +50,7 @@ public interface PartitionFunction extends Serializable {
   /// `MurmurPartitionFunction` registers under both `Murmur` and `Murmur2`.
   @JsonIgnore
   default List<String> getNames() {
-    return Collections.singletonList(getName());
+    return List.of(getName());
   }
 
   /// Returns the total number of possible partitions.
