@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.tools;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,7 +29,7 @@ import org.apache.pinot.spi.utils.CommonConstants;
 public class JfrQuickstart extends Quickstart {
   @Override
   public List<String> types() {
-    return Collections.singletonList("JFR");
+    return List.of("JFR");
   }
 
   @Override
